--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 </script>
 <div class="row">
   <div class="col-md-4">
-    <h1>Latest updates</h1>
+    <h1>Latest updates <%= @branch_title %></h1>
     <div id="commits">
       <div class="card-pf card-pf-accented card-pf-aggregate-status">
         <div class="card-pf-body">
