Add event description
, updated left side menu

--- a/app/views/application/_menu_lat.html.erb
+++ b/app/views/application/_menu_lat.html.erb
@@ -26,12 +26,19 @@
         </div>
         <ul class="list-group">
           <% Event.all.each do |event| %>
-          <li class="list-group-item " data-target="#event-ggc2017-tertiary">
+          <li class="list-group-item">
             <%= link_to event_path(event.id) do %>
             <span class="list-group-item-value"><%= event.shortname %></span>
             <% end %>
           </li>
+          <li class="list-group-item spacer">
+          </li>
           <% end %>
+          <li class="list-group-item">
+            <%= link_to events_path do %>
+            <span class="list-group-item-value">All events</span>
+            <% end %>
+          </li>
         </ul>
       </div>
     </li>
