--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -53,3 +53,13 @@ h1.card-pf-title{
   border-style:inset inset inset inset;
   border-color:#4CACD5;
 }
+
+li.list-group-item.spacer {
+  height: 2px;
+  border-width:1px 0px 0px 0px;
+  border-style:solid solid solid solid;
+  border-color:#000000 #000000 #000000 #000000;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
