--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="layout-pf layout-pf-fixed transitions">
 <head>
-  <title>GGCWebsite</title>
+  <title>GGC Member zone</title>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => false %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
   <%= javascript_include_tag("c3.min.js") %>
