--- a/app/views/application/_menu_lat.html.erb
+++ b/app/views/application/_menu_lat.html.erb
@@ -43,10 +43,10 @@
       </div>
     </li>
     <li class="list-group-item">
-      <a>
-        <span class="fa pficon-help" data-toggle="tooltip" title="FAQ"></span>
-        <span class="list-group-item-value">FAQ</span>
-      </a>
+      <%= link_to faq_path do %>
+      <span class="fa pficon-help" data-toggle="tooltip" title="FAQ"></span>
+      <span class="list-group-item-value">FAQ</span>
+      <% end %>
     </li>
     <li class="list-group-item secondary-nav-item-pf" data-target="#settings-secondary">
       <a>
