--- a/app/views/application/_menu_top.html.erb
+++ b/app/views/application/_menu_top.html.erb
@@ -11,9 +11,9 @@
         <%= image_tag("ggc_web_color", width: "72", class: "navbar-brand-icon") %>
         <span class="navbar-brand-name" style="font-size: 22px; vertical-align: middle;">Geneva Gaming Convention</span>
         <% if Rails.application.secrets.github_branch && Rails.application.secrets.github_branch == "preprod" %>
-        <span class="label label-info">Preprod</span>
+        <span class="label label-info" style="font-size: 9px;">Preprod</span>
         <% elsif Rails.application.secrets.github_branch && Rails.application.secrets.github_branch == "dev" %>
-        <span class="label label-primary">dev</span>
+        <span class="label label-primary" style="font-size: 9px;">dev</span>
         <% end %>
       </a>
     </div>
