--- a/app/views/address/_form_new.html.erb
+++ b/app/views/address/_form_new.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@address, remote: true, :html => {:class => 'form-horizontal', :id => 'new_address_form'}) do |f| %>
 <div class="form-group">
   <label class="col-sm-3 control-label" for="street-modal-markup">
-    Where do you live ?
+    Street and n°
   </label>
   <div class="col-sm-9">
     <%= select_tag "address[street]", nil, class: 'form-control', id: "street-modal-markup", style: "width:100%;" %>
