--- a/app/views/users/_form_edit.html.erb
+++ b/app/views/users/_form_edit.html.erb
@@ -32,6 +32,9 @@
 <div class="form-group">
   <div class="col-sm-offset-2 col-sm-10">
     <button type="submit" class="btn btn-lg btn-primary">Update</button>
+    <% if !@user.validated %>
+    <%= link_to 'Send me an other validation mail',user_ask_validation_path(@user.id), :class=>"btn btn-lg btn-primary"  %>
+    <% end %>
   </div>
 </div>
 <% end %>
