Display upcoming events

--- a/app/assets/javascripts/welcome.js.erb
+++ b/app/assets/javascripts/welcome.js.erb
@@ -2,4 +2,7 @@ $( document ).ready(function() {
   if($('#commits').length ){
     display_commits();
   }
+  if($('#commits').length ){
+    display_events();
+  }
 });
