--- a/app/views/application/_menu_lat.html.erb
+++ b/app/views/application/_menu_lat.html.erb
@@ -25,7 +25,7 @@
           <span>Events</span>
         </div>
         <ul class="list-group">
-          <% Event.all.each do |event| %>
+          <% Event.all.where(visible: true).each do |event| %>
           <li class="list-group-item">
             <%= link_to event_path(event.id) do %>
             <span class="list-group-item-value"><%= event.shortname %></span>
@@ -71,21 +71,21 @@
               <span data-toggle="modal" data-target="#about-modal" class="list-group-item-value">About</span>
             </a>
           </li>
-          <% if current_logged_user %>
-          <li class="list-group-item">
-            <%= link_to logout_path, :method => :delete do %>
-            <span class="list-group-item-value">Logout</span>
-            <% end %>
-          </li>
-          <% else %>
-          <li class="list-group-item">
-            <%= link_to login_path do %>
-            <span class="list-group-item-value">Log in</span>
-            <% end %>
-          </li>
-          <% end %>
         </ul>
       </div>
+    </li>
+    <li class="list-group-item">
+      <% if current_logged_user %>
+        <%= link_to logout_path, method: :delete do %>
+        <span class="fa pficon-private" data-toggle="tooltip" title="FAQ"></span>
+        <span class="list-group-item-value">Log out</span>
+        <% end %>
+      <% else %>
+        <%= link_to login_path do %>
+        <span class="fa pficon-private" data-toggle="tooltip" title="FAQ"></span>
+        <span class="list-group-item-value">Login / Register</span>
+        <% end %>
+      <% end %>
     </li>
   </ul>
 </div>
