--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -16,10 +16,10 @@
       <div class="col-sm-12">
         <div id="brand">
           <h1 class="hidden-xs">
-            Geneva Gaming Convention
+            GGC Member zone <span class="beta">𝛃eta</span>
           </h1>
           <h1 class="visible-xs">
-            Geneva Gaming Convention
+            GGC Member zone <span class="beta">𝛃eta</span>
           </h1>
         </div>
       </div>
