--- a/public/403.html.erb
+++ b/public/403.html.erb
@@ -6,7 +6,7 @@
         <p><%= @error_info ||='' %></p>
         <% if @error_info == '' %>
         <p>You may be have to be connected to see this page ?</p>
-        <%= link_to 'Take to to the login page', login_path, :class=>"btn btn-lg btn-primary" %>
+        <%= link_to 'Take me to the login page', login_path, :class=>"btn btn-lg btn-primary" %>
         <% end %>
       </div>
       <div class="panel-footer">If you are the application owner check the logs for more information.</div>
