--- a/public/404.html.erb
+++ b/public/404.html.erb
@@ -13,7 +13,7 @@
           <% end %>
         <% else %>
           <h1>The page you were looking for doesn't exist.</h1>
-          <p>You may have mistyped the address or the page may have moved.</p>
+          <h4>You may have mistyped the address or the page may have moved.</h4>
         <% end %>
       </div>
       <div class="panel-footer"></div>
