--- a/app/views/event_resources/_show.html.erb
+++ b/app/views/event_resources/_show.html.erb
@@ -1,13 +1,19 @@
 <div class="row">
   <div class="col-md-12">
-    <h4><%= resource.title %></h4>
-    <div class="card-pf-body">
+    <div class="banner
+    <% if resource.banner %>
+    <%= resource.banner.downcase %>
+    <% end %>
+    ">
+      <h4><%= resource.title %></h4>
       <p>
         <h5>Starting date: <%= resource.start_at.strftime("%d %B %Y at %Hh%M") %></h5>
       </p>
       <p>
         <%= resource.description %>
       </p>
+    </div>
+    <div class="card-pf-body">
       <p>
         <iframe src="<%= resource.remote_url%>" width="100%" height="600" frameborder="0" scrolling="no" allowfullscreen="true"></iframe>
       </p>
