--- a/public/403.html.erb
+++ b/public/403.html.erb
@@ -5,7 +5,7 @@
         <h1>You have not the right to be here, pass your way.</h1>
         <h4><%= @error_info ||='' %></h4>
         <% if @error_info == '' %>
-        <h4>You may be have to be connected to see this page ?</h4>
+        <h4>You maybe have to be connected to see this page ?</h4>
         <%= link_to 'Take me to the login page', login_path, :class=>"btn btn-lg btn-primary" %>
         <% end %>
       </div>
