Updated event resources banner properties

--- a/app/assets/stylesheets/event_resources.scss
+++ b/app/assets/stylesheets/event_resources.scss
@@ -9,15 +9,15 @@
 }
 
 .ow{
-  background: image-url('ow.jpg') no-repeat top right fixed;
+  background: image-url('ow.jpg') repeat-x top right fixed;
 }
 
 .cs{
-  background: image-url('cs.jpg') no-repeat top right fixed;
+  background: image-url('cs.jpg') repeat-x top right fixed;
 }
 
 .lol{
-  background: image-url('lol.jpg') no-repeat top right fixed;
+  background: image-url('lol.jpg') repeat-x top right fixed;
 }
 
 .hs{
