Updated tournament banner css

--- a/app/assets/stylesheets/event_resources.scss
+++ b/app/assets/stylesheets/event_resources.scss
@@ -21,9 +21,9 @@
 }
 
 .hs{
-  background: image-url('hs.jpg') no-repeat top right fixed;
+  background: image-url('hs.jpg') repeat-x top right fixed;
 }
 
 .rl{
-  background: image-url('rl.jpg') no-repeat top right fixed;
+  background: image-url('rl.jpg') repeat-x top right fixed;
 }
