--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -38,8 +38,8 @@
       <div class="col-sm-5 col-md-6 col-lg-7 details">
         <p>
           <strong>Welcome to GGC | Geneva Gaming Convention member zone!</strong></br>
-          Here you are able to manage all your GGC experience such as create some teams for tournament,</br>
-          edit a bunch of personals preferences, find some friends and much more.</br>
+          Here you are able to manage all your GGC experience, such as create teams for tournaments, </br>
+          edit your preferences, find friends and much more.</br>
           GL HF
         </p>
       </div>
