--- a/app/views/register_mailer/welcome.html.erb
+++ b/app/views/register_mailer/welcome.html.erb
@@ -39,7 +39,7 @@
               </tr>
               <tr>
                 <td data-color="text" data-size="size text" data-min="10" data-max="26" data-link-color="link text color" data-link-style="font-weight:bold; text-decoration:underline; color:#40aceb;" align="left" style="font:bold 16px/25px Arial, Helvetica, sans-serif; color:#888; padding:0 0 1em;">
-                  2️⃣ You're now able to log in on the GGC website:<br/>
+                  2️⃣ You're now able to log in on the GGC member zone:<br/>
                 </td>
               </tr>
               <tr>
@@ -55,17 +55,16 @@
               </tr>
               <tr>
                 <td data-color="text" data-size="size text" data-min="10" data-max="26" data-link-color="link text color" data-link-style="font-weight:bold; text-decoration:underline; color:#40aceb;" align="left" style="font:bold 16px/25px Arial, Helvetica, sans-serif; color:#888; padding:0 0 1em;">
-                  3️⃣ Once logged in, edit your personnal informations and add an address.<br/>
+                  3️⃣ Once logged in, edit your personnal informations, add an address and a phone number.<br/>
                 </td>
               </tr>
               <tr>
                 <td data-color="text" data-size="size text" data-min="10" data-max="26" data-link-color="link text color" data-link-style="font-weight:bold; text-decoration:underline; color:#40aceb;" align="left" style="font:bold 16px/25px Arial, Helvetica, sans-serif; color:#888; padding:0 0 1em;">
-                  4️⃣ After this you can now add some games accounts to take part in any of our GGC Tournaments !<br/>
+                  4️⃣ You can now take part in any of our GGC Esports event !<br/>
                 </td>
               </tr>
               <tr>
                 <td data-color="text" data-size="size text" data-min="10" data-max="26" data-link-color="link text color" data-link-style="font-weight:bold; text-decoration:underline; color:#40aceb;" align="left" style="font:bold 16px/25px Arial, Helvetica, sans-serif; color:#888; padding:0 0 1em;">
-                  Congratulation, you're now totaly ready to come at GGC 2017 !<br/><br/>
                   See you there, GL & HF !
                 </td>
               </tr>
