--- a/app/views/application/_about_modal.html.erb
+++ b/app/views/application/_about_modal.html.erb
@@ -14,7 +14,7 @@
               <strong>Clément Hampaï</strong>
               v.<small>
                 <% if get_revision.to_s != "unknown 😳" %>
-                <%= link_to get_revision(7), 'https://github.com/geneva-gaming-convention/GGC-Website/commit/'+get_revision %>
+                <%= link_to get_revision(7), 'https://github.com/geneva-gaming-convention/GGC-Website/commit/'+get_revision, target: :_blank %>
                 <% else %>
                 <%= get_revision %>
                 <% end %>
