--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,9 +3,9 @@
 <%= render :partial => "display_events.js" %>
 </script>
 <div class="row">
-  <div class="col-md-4">
-    <h1>Latest updates <%= @branch_title %></h1>
-    <div id="commits">
+  <div class="col-md-10">
+    <h1>Upcoming events</h1>
+    <div id="events">
       <div class="card-pf card-pf-accented card-pf-aggregate-status">
         <div class="card-pf-body">
           <div class="spinner"></div>
@@ -13,9 +13,9 @@
       </div>
     </div>
   </div>
-  <div class="col-md-8">
-    <h1>Upcoming events</h1>
-    <div id="events">
+  <div class="col-md-2">
+    <h1>Latest updates</h1>
+    <div id="commits">
       <div class="card-pf card-pf-accented card-pf-aggregate-status">
         <div class="card-pf-body">
           <div class="spinner"></div>
