--- a/app/views/events/_event_summary.html.erb
+++ b/app/views/events/_event_summary.html.erb
@@ -1,18 +1,16 @@
-<div class="row">
-  <div class="col-md-12">
-    <div class="card-pf card-pf-accented card-pf-aggregate-status">
-      <h3><%= event.name %></h3>
-      <div class="card-pf-body">
-        <p>
-          <h5>Starting date: <%= event.date.strftime("%d %B %Y at %Hh%M") %></h5>
-        </p>
-        <p>
-          <%= event.description %>
-        </p>
-        <p>
-          <%= link_to 'Show event\'s informations >', event_path(event.id), :class=>"btn btn-lg btn-primary"  %>
-        </p>
-      </div>
+<div>
+  <div class="card-pf card-pf-accented card-pf-aggregate-status">
+    <h3><%= event.name %></h3>
+    <div class="card-pf-body">
+      <p>
+        <h5>Starting date: <%= event.date.strftime("%d %B %Y at %Hh%M") %></h5>
+      </p>
+      <p>
+        <%= event.description %>
+      </p>
+      <p>
+        <%= link_to 'Show event\'s informations >', event_path(event.id), :class=>"btn btn-lg btn-primary"  %>
+      </p>
     </div>
   </div>
 </div>
