--- a/app/views/users/_form_edit.html.erb
+++ b/app/views/users/_form_edit.html.erb
@@ -2,13 +2,13 @@
 <div class="form-group">
   <%= label_tag 'firstname', "Firstname", class: 'col-sm-2 col-md-2 control-label' %>
   <div class="col-sm-10 col-md-10">
-    <%= f.text_field :name, class: 'form-control', :value => f.object.name.capitalize %>
+    <%= f.text_field :name, class: 'form-control', :value => f.object.name.capitalize, :autocomplete => :off  %>
   </div>
 </div>
 <div class="form-group">
   <%= label_tag 'lastname', "Lastname", class: 'col-sm-2 col-md-2 control-label' %>
   <div class="col-sm-10 col-md-10">
-    <%= f.text_field :lastname, class: 'form-control', :value => f.object.lastname.capitalize%>
+    <%= f.text_field :lastname, class: 'form-control', :value => f.object.lastname.capitalize, :autocomplete => :off %>
   </div>
 </div>
 <div class="form-group">
