--- a/app/views/steam_accounts/_form_new.html.erb
+++ b/app/views/steam_accounts/_form_new.html.erb
@@ -1,10 +1,12 @@
 <div class="row">
-  <div class="col-md-4">
-    <h4>Log in with Steam</h4>
+  <div class="col-md-12">
+    <h4>Add a Steam account</h4>
   </div>
-  <div class="col-md-8">
+</div>
+<div class="row">
+  <div class="col-md-12">
     <%= link_to new_steam_account_path do %>
-    <%= image_tag 'steam_oauth'%>
+    <%= image_tag 'steam_oauth', class: "btn btn-primary", style: "height: 100px; margin: 1em;"%>
     <% end %>
   </div>
 </div>
