--- a/app/views/users/_modal_new_game_account.html.erb
+++ b/app/views/users/_modal_new_game_account.html.erb
@@ -12,6 +12,7 @@
       </div>
       <div class="modal-body">
         <%= render 'steam_accounts/form_new' %>
+        <%= render 'battlenet_accounts/form_new' %>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
