--- a/app/views/battlenet_accounts/_show.html.erb
+++ b/app/views/battlenet_accounts/_show.html.erb
@@ -2,7 +2,7 @@
   <div class="panel-body">
     <div class="row">
       <div class="col-md-2">
-        <%= image_tag("bnet_oauth", class: "img-circle", size: "54x54", style:"filter: invert(100%);") %>
+        <%= image_tag("bnet_oauth", class: "img-circle", width: "54", style:"filter: invert(100%);") %>
       </div>
       <div class="col-md-3">
         <h5>Name: <small><%= game_account.name.capitalize %></small></h5>
