--- a/app/views/users/_game_account_card.html.erb
+++ b/app/views/users/_game_account_card.html.erb
@@ -1,7 +1,7 @@
 <div class="col-md-4">
   <div class="card-pf card-pf-accented card-pf-aggregate-status">
     <h1 class="card-pf-title">
-      <span class="glyphicon glyphicon-knight"></span> Games account
+      <span class="glyphicon glyphicon-knight"></span> Game accounts
     </h1>
     <div class="card-pf-body">
       <%= render 'modal_new_game_account'%>
