--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag("c3.min.js") %>
   <%= javascript_include_tag("d3.min.js") %>
   <%= javascript_include_tag("jquery.matchHeight-min.js") %>
+  <%= analytics_init if GoogleAnalytics.valid_tracker? %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
