--- a/app/views/battlenet_accounts/_show.html.erb
+++ b/app/views/battlenet_accounts/_show.html.erb
@@ -1,23 +1,24 @@
 <div class="panel panel-default">
   <div class="panel-body">
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-6">
+        <h3><%= game_account.name.capitalize %></h3>
+      </div>
+      <div class="col-md-6">
         <%= image_tag("bnet_logo", class: "img-circle", width: "54") %>
       </div>
-      <div class="col-md-3">
-        <h5>Name: <small><%= game_account.name.capitalize %></small></h5>
-      </div>
-      <div class="col-md-4">
+    </div>
+    <div class="row">
+      <div class="col-md-6">
         <h5>Bnet ID: <small><%= game_account.account_id %></small></h5>
       </div>
-      <div class="col-md-3">
-        <h5>Action:
-          <small>
-            <%= link_to user_battlenet_account_path(current_logged_user.id, game_account.id), method: :delete, class: "btn btn-danger btn-xs" do %>
-            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            <% end %>
-          </small>
-        </h5>
+      <div class="col-md-6">
+        <h5>Action:</h5>
+        <p>
+          <%= link_to user_battlenet_account_path(current_logged_user.id, game_account.id), method: :delete, class: "btn btn-danger btn-xs" do %>
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
+          <% end %>
+        </p>
       </div>
     </div>
   </div>
