Updated CSGO event's banner

--- a/app/assets/stylesheets/event_resources.scss
+++ b/app/assets/stylesheets/event_resources.scss
@@ -12,8 +12,8 @@
   background: image-url('ow.jpg') repeat-x top right fixed;
 }
 
-.cs{
-  background: image-url('cs.jpg') repeat-x top right fixed;
+.csgo{
+  background: image-url('csgo.jpg') repeat-x top right fixed;
 }
 
 .lol{
