--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,6 +12,7 @@
   </div>
 </div>
 <% end %>
+<%= render 'breadcrumb' %>
 <div class="row">
   <div class="col-md-12">
     <h1>
@@ -31,22 +32,5 @@
   </div>
 </div>
 <div class="row">
-  <!-- Nav tabs -->
-  <ul id="game_tabs" class="nav nav-tabs" role="tablist">
-    <% @games.each do |game| %>
-    <li role="presentation">
-      <a href="#<%= game.proper_shortname %>" id="tab_btn_<%= game.proper_shortname %>" aria-controls="<%= game.proper_shortname %>" role="tab" data-toggle="tab"><%= game.name %></a>
-    </li>
-    <% end %>
-  </ul>
-  <!-- Tab panes -->
-  <div class="tab-content">
-    <% @games.each do |game| %>
-    <div role="tabpanel" class="tab-pane fade" id="<%= game.proper_shortname %>">
-      <% @event.event_resources_by_game(game).each do |resource| %>
-      <%= render 'event_resources/show', resource: resource %>
-      <% end %>
-    </div>
-    <% end %>
-  </div>
+  <%= render 'event_resources/index' %>
 </div>
