--- a/app/views/event_resources/show.html.erb
+++ b/app/views/event_resources/show.html.erb
@@ -20,7 +20,14 @@
   <div class="card-pf-body">
     <p>
       <% if is_logged_in && is_ready_for_registration %>
-      <iframe src="<%= @event_resource.remote_url%>" width="100%" height="600" frameborder="0" scrolling="no" allowfullscreen="true"></iframe>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Registration <span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></h3>
+        </div>
+        <div class="panel-body">
+          <%= link_to 'Take me to registration', "https://www.toornament.com/tournaments/"+@event_resource.get_resource_remote_id+"/registration", :class => "btn btn-primary btn-lg"%>
+        </div>
+      </div>
       <% else %>
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -30,6 +37,7 @@
           To see this event you need to be <%= link_to 'connected', login_path %> and your account need to be ready for registration first 😉.
         </div>
       </div>
+      <% end %>
       <div class="panel panel-default">
         <div class="panel-heading">
           <% if @event_resource.game.teambased %>
@@ -48,7 +56,6 @@
           </div>
         </div>
       </div>
-      <% end %>
     </p>
   </div>
 </div>
