--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,3 @@
-<h1>Personals informations</h1>
 <% flash.each do |key, value| %>
 <div id="error_explanation" class="alert alert-<%=key%>" role="alert">
   <p>
@@ -34,7 +33,7 @@
   <div class="row row-cards-pf">
     <div class="card-pf card-pf-accented">
       <div class="card-pf-title">
-        Profil picture
+        Profil
       </div>
       <div class="card-pf-body">
         <%= render 'form_edit' %>
