Add favicon and followed Toornament's API Terms

--- a/app/views/event_resources/show.html.erb
+++ b/app/views/event_resources/show.html.erb
@@ -54,6 +54,7 @@
             <div style="text-align:center;"><span class="spinner spinner-xs spinner-inline"></span> Searching for players...</div>
             <% end %>
           </div>
+          <%= render 'application/toornament_powered' %>
         </div>
       </div>
     </p>
