--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -46,6 +46,7 @@
     </div>
   </div>
 </div>
+<%= render 'application/toornament_powered' %>
 <script type="text/javascript">
 display_resources();
 </script>
