--- a/app/views/application/_menu_lat.html.erb
+++ b/app/views/application/_menu_lat.html.erb
@@ -9,7 +9,7 @@
     <% if is_logged_in %>
     <li class="list-group-item">
       <%= link_to user_path(current_logged_user.id) do %>
-      <span class="fa pficon-user" data-toggle="tooltip" title="Dashboard"></span>
+      <span class="fa pficon-user" data-toggle="tooltip" title="Me"></span>
       <span class="list-group-item-value"><%= current_logged_user.name.capitalize %></span>
       <% end %>
     </li>
