--- a/app/views/users_groups/_form_new.html.erb
+++ b/app/views/users_groups/_form_new.html.erb
@@ -18,7 +18,7 @@
   </div>
 </div>
 <div class="form-group">
-  <div class="col-sm-offset-2 col-sm-10">
+  <div class="col-sm-12">
     <button type="submit" class="btn btn-primary btn-lg">Create the group</button>
   </div>
 </div>
