--- a/app/views/users_groups/_list_groups.html.erb
+++ b/app/views/users_groups/_list_groups.html.erb
@@ -6,15 +6,28 @@
       <div class="panel-heading">
         <h3 class="panel-title">
           <%= link_to user_users_group_path(group.get_proprietary, group) do %>
-          <%= group.name.capitalize %> [<%= group.tag.upcase %>]
+          <%= group.name %> [<%= group.tag.upcase %>]
           <% end %>
         </h3>
       </div>
       <div class="panel-body">
         <div class="row" style="margin-bottom:1em;">
           <div class="col-md-12">
+            <%= link_to "Show details", show_group_path(group), class:"btn btn-primary btn-xs" %>
             <% if is_logged_in %>
-            <%= link_to "Show details", user_users_group_path(group.get_proprietary, group), class:"btn btn-primary btn-xs" %>
+            <% if group.is_user_already_group_member(current_logged_user) %>
+              <button class="btn btn-primary btn-xs disabled"
+                      data-toggle="tooltip"
+                      data-placement="top"
+                      title="You're already in this group, genius 😆 !">Join</button>
+            <% else %>
+            <%= link_to "Join", ask_join_users_group_path(group), class:"btn btn-primary btn-xs" %>
+            <% end %>
+            <% else %>
+            <button class="btn btn-primary btn-xs disabled"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="You need to be logged to join groups">Join</button>
             <% end %>
           </div>
         </div>
@@ -34,6 +47,6 @@
   </div>
   <% end %>
   <% else %>
-  <%= render 'application/empty_state', title: "Friend's groups", info: "Create or join a friend group, check above ⬆️..." %>
+  <%= render 'application/empty_state', title: "Friend's groups", info: "Create a friend group, you will be the first one 😉..." %>
   <% end %>
 </div>
