--- a/app/views/users_groups/show.html.erb
+++ b/app/views/users_groups/show.html.erb
@@ -1,41 +1,106 @@
+<% flash.each do |key, value| %>
+<div id="error_explanation" class="alert alert-<%=key%>" role="alert">
+  <p>
+    <%= value %>
+  </p>
+</div>
+<% end %>
+<% if @group.errors.any? %>
+<div id="error_explanation" class="alert alert-danger">
+  <h5><%= pluralize(@group.errors.count, "error") %> canceled your registration:</h5>
+  <ul>
+    <% @group.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
 <div class="row">
   <div class="col-md-12">
     <div class="card-pf card-pf-accented card-pf-aggregate-status">
       <div class="card-pf-title">
         <h1>
           <span class="glyphicon pficon-project" aria-hidden="true"></span>
-          <%= @group.name.capitalize %><br/>
+          <%= @group.name %><br/>
           <small>tag: [<%= @group.tag.upcase %>]</small>
         </h1>
       </div>
       <div class="card-pf-body">
         <div class="row">
+          <!-- Group's members -->
           <div class="col-md-4">
-            Members:
-            <table class="table table-striped table-bordered">
-              <thead>
-                <tr>
-                  <th>First Name</th>
-                  <th>Last Name</th>
-                  <th>Infos</th>
-                </tr>
-              </thead>
-              <tbody>
-                <% @group.group_members.each do |member| %>
-                <% user = member.user %>
-                <tr>
-                  <td><%= user.name.capitalize%></td>
-                  <td><%= user.lastname.capitalize%></td>
-                  <td>
-                    <% if member.is_creator %>
-                    <span class="glyphicon pficon-help" aria-hidden="true"></span>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Members</h3>
+              </div>
+              <div class="panel-body">
+                <table class="table table-striped table-bordered">
+                  <thead>
+                    <tr>
+                      <th>First Name</th>
+                      <th>Last Name</th>
+                      <th>Infos</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <% @group.group_members.each do |member| %>
+                    <% user = member.user %>
+                    <tr>
+                      <td><%= user.name.capitalize%></td>
+                      <td><%= user.lastname.capitalize%></td>
+                      <td>
+                        <% if member.is_creator %>
+                        <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Admin
+                        <% end %>
+                      </td>
+                    </tr>
                     <% end %>
-                  </td>
-                </tr>
-                <% end %>
-              </tbody>
-            </table>
+                  </tbody>
+                </table>
+                <button class="btn btn-primary" type="button">Invite members</button>
+              </div>
+            </div>
           </div>
+          <!-- ---------------- -->
+          <!-- Group's teams -->
+          <div class="col-md-4">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Teams</h3>
+              </div>
+              <div class="panel-body">
+                <table class="table table-striped table-bordered">
+                  <thead>
+                    <tr>
+                      <th>Team Name</th>
+                      <th>Infos</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th>Team de qualité</th>
+                      <th>details</th>
+                    </tr>
+                  </tbody>
+                </table>
+                <button class="btn btn-primary" type="button">Create team</button>
+              </div>
+            </div>
+          </div>
+          <!-- ---------------- -->
+          <!-- Group settings -->
+          <div class="col-md-4">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Group settings</h3>
+              </div>
+              <div class="panel-body">
+                <p>Gros gros settings...</p>
+                <button class="btn btn-primary" type="button">Save</button>
+              </div>
+            </div>
+          </div>
+          <!-- ---------------- -->
         </div>
       </div>
     </div>
