--- a/app/views/users_groups/show.html.erb
+++ b/app/views/users_groups/show.html.erb
@@ -95,8 +95,7 @@
                 <h3 class="panel-title">Group settings</h3>
               </div>
               <div class="panel-body">
-                <p>Gros gros settings...</p>
-                <button class="btn btn-primary" type="button">Save</button>
+                <%= render 'group_settings', :group => @group %>
               </div>
             </div>
           </div>
