--- a/app/views/users_groups/_group_settings.html.erb
+++ b/app/views/users_groups/_group_settings.html.erb
@@ -5,7 +5,7 @@
       <% if group.is_user_already_group_member(current_logged_user) %>
         <!-- logged & in grp -->
         <% if group.is_proprietary(current_logged_user) %>
-
+        <%= render 'group_settings_proprietary' %>
         <% else %>
         <%= link_to "Leave this group", ask_to_leave_path(group), class: "btn btn-danger" %>
         <% end %>
