--- a/app/views/users_groups/show.html.erb
+++ b/app/views/users_groups/show.html.erb
@@ -57,7 +57,7 @@
                     <% end %>
                   </tbody>
                 </table>
-                <button class="btn btn-primary" type="button">Invite members</button>
+                <button class="btn btn-primary disabled" type="button">Invite members</button>
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
                     </tr>
                   </tbody>
                 </table>
-                <button class="btn btn-primary" type="button">Create team</button>
+                <button class="btn btn-primary disabled" type="button">Create team</button>
               </div>
             </div>
           </div>
