Added deleting|kicking group's process

--- a/app/views/users_groups/_group_settings.html.erb
+++ b/app/views/users_groups/_group_settings.html.erb
@@ -11,11 +11,12 @@
         <% end %>
       <% else %>
         <!-- logged & out grp -->
+        <%= link_to "Join "+group.name, ask_join_users_group_path(group), class:"btn btn-primary" %>
       <% end %>
       <!-- ########## -->
     <% else %>
       <!-- anon user -->
-
+      
       <!-- ######### -->
     <% end %>
   </div>
