--- a/app/views/users_groups/ask_to_destroy.html.erb
+++ b/app/views/users_groups/ask_to_destroy.html.erb
@@ -5,15 +5,24 @@
   </p>
 </div>
 <% end %>
+<% if @group.errors.any? %>
+<div id="error_explanation" class="alert alert-danger">
+  <h5><%= pluralize(@group.errors.count, "error") %> canceled your registration:</h5>
+  <ul>
+    <% @group.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+</div>
+<% end %>
 <div class="row">
   <div class="col-md-12">
     <div class="card-pf card-pf-accented card-pf-aggregate-status">
       <div class="card-pf-title">
-        <span class="glyphicon pficon-project" aria-hidden="true"></span>
-        Friend's group
+        <h1>Delete <%= @group.name %></h1>
       </div>
       <div class="card-pf-body">
-        <%= render 'list_groups' %>
+        <%= render 'form_destroy' %>
       </div>
     </div>
   </div>
