--- a/app/views/users_groups/show.html.erb
+++ b/app/views/users_groups/show.html.erb
@@ -29,37 +29,7 @@
         <div class="row">
           <!-- Group's members -->
           <div class="col-md-4">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h3 class="panel-title">Members</h3>
-              </div>
-              <div class="panel-body">
-                <table class="table table-striped table-bordered">
-                  <thead>
-                    <tr>
-                      <th>First Name</th>
-                      <th>Last Name</th>
-                      <th>Infos</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <% @group.group_members.each do |member| %>
-                    <% user = member.user %>
-                    <tr>
-                      <td><%= user.name.capitalize%></td>
-                      <td><%= user.lastname.capitalize%></td>
-                      <td>
-                        <% if member.is_creator %>
-                        <span class="glyphicon glyphicon-sunglasses" aria-hidden="true"></span> Admin
-                        <% end %>
-                      </td>
-                    </tr>
-                    <% end %>
-                  </tbody>
-                </table>
-                <button class="btn btn-primary disabled" type="button">Invite members</button>
-              </div>
-            </div>
+            <%= render 'show_group_members', :group => @group %>
           </div>
           <!-- ---------------- -->
           <!-- Group's teams -->
