Hided temporary "Invite members" button

--- a/app/views/users_groups/_show_group_members.html.erb
+++ b/app/views/users_groups/_show_group_members.html.erb
@@ -38,6 +38,6 @@
         <% end %>
       </tbody>
     </table>
-    <button class="btn btn-primary disabled" type="button">Invite members</button>
+    <!--<button class="btn btn-primary disabled" type="button">Invite members</button>-->
   </div>
 </div>
