--- a/app/views/users_groups/_group_settings_proprietary.html.erb
+++ b/app/views/users_groups/_group_settings_proprietary.html.erb
@@ -12,7 +12,7 @@
   </div>
 </div>
 <div class="form-group">
-  <%= label_tag 'password', "Password", class: 'col-sm-4 col-md-4 control-label'  %>
+  <%= label_tag 'password', "New password", class: 'col-sm-4 col-md-4 control-label'  %>
   <div class="col-sm-8 col-md-8">
     <%= f.password_field :password, class: 'form-control'%>
   </div>
