Updated about's modal

--- a/app/views/application/_about_modal.html.erb
+++ b/app/views/application/_about_modal.html.erb
@@ -16,6 +16,9 @@
               </strong></br>
               <strong>
                 <%= link_to "Noémien Kocher", "https://github.com/nkcr", :target => "_blank", :style => "color:#FFF;"%>
+              </strong></br>
+              <strong>
+                <%= link_to "Luc Perusse", "https://github.com/Luckystrike561", :target => "_blank", :style => "color:#FFF;"%>
               </strong>
               <p class="text-right">
               v.<small>
