--- a/app/views/users_groups/_show_group_members.html.erb
+++ b/app/views/users_groups/_show_group_members.html.erb
@@ -38,6 +38,14 @@
         <% end %>
       </tbody>
     </table>
-    <!--<button class="btn btn-primary disabled" type="button">Invite members</button>-->
+    <% if is_logged_in && group.is_proprietary(current_logged_user) %>
+    <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#sharing_modal">
+      Invite members <span class="glyphicon pficon-arrow" aria-hidden="true"></span>      
+    </button>
+    <%= render 'sharing_modal', :data => "Share this link with your friends. This link allow them to join the group.", :link => token_join_users_group_url(group.id, group.token) %>
+    <% else %>
+    <button class="btn btn-primary disabled" type="button"
+    data-toggle="tooltip" data-placement="right" title="You need to be admin to use this.">Invite members</button>
+    <% end %>
   </div>
 </div>
